# guide2kulchur

./: .gitignore  README.md  pyproject.toml  requirements.txt  t2.json  test.json  test2.json  testfile.json
data/genres/: genre_URLs.json  most_read_ids.json  top_shelved_ids.json
data/goodreads-choice-awards/: winners_2011.json  winners_2017.json  winners_2018.json  winners_2019.json  winners_2020.json  winners_2021.json  winners_2023.json
data/raw/: sitemaps.json
db/: init_schema.sql
db/migrations/: 001_alter_TABLEalexandria_COLUMNsim_books.sql  001_init_schema.sql  002_create_TABLEerror_id.sql  003_add_INDEXalexandria_on_sim_books.sql  004_alter_TABLEpound_deleteCOLUMNsimauthorsurlid_COLUMNSjsonb2array.sql  005_add_INDEXpound_on_sim_authors.sql  006_alter_TABLEfalse_dmitry_LARGEUPDATE.sql  007_add_TABLEgendernames.sql  008_add_MATVIEWSgendernames.sql  009_add_TABLEdistinclocations.sql  010_add_TABLEwikidata_lb.sql  011_add_TABLEgr_awards.sql
guide2kulchur/engineer/: algis.py  batchpullers.py  envy.py  houseofwisdom.py  openlib.py  plato.py  plotinus.py  recruits.py  simpullers.py
guide2kulchur/privateer/: alexandria.py  falsedmitry.py  hdts.py  herodotus.py  insaneasylum.py  pound.py  recruits.py  sitemap_get.py
scripts/: get_awards_data.py
scripts/ex-post/: 00_extract_pound_4_map.sql  00_fuzzy_update_pound_birthANDloc.sql  01_extract_alexandria_4_map.sql  01_extract_pound_4_map.sql  02_graphing_pound.py
scripts/goodreads-choice-awards/: 00_get_awards_data.py  01_get_winning_authors.py  get_awards_data.py  get_winning_authors.py
(+54 files in other folders)
