[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "guide2kulchur"
description = "0000"
requires-python = ">=3.13.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
version = "1.0.0"
authors = [{"name" = "rhawrami", "email" = "ravanhawrami@gmail.com"}]
readme = {"file" = "README.md", content-type = "text/markdown"}
dependencies = ["aiohttp", "requests", "lxml", "bs4", "psycopg", "dotenv"]

[tool.setuptools]
packages = { find = { include = ["guide2kulchur"], exclude = ["scripts","tests","data","db"] } }